--- a/Homestead.yaml
+++ b/Homestead.yaml
@@ -23,3 +23,8 @@ databases:
     - homestead
 name: base2018jwt
 hostname: base2018jwt
+
+networks:
+    - type: "public_network"
+      ip: "192.168.10.50"
+      bridge: "Realtek PCIe GBE Family Controller"
